# HW13-part1

./: .env  alembic.ini  main.py  mycontacts.db  pyproject.toml
migrations/: README
migrations/versions/: 7f43090ec54a_user_confirmed_email.py  bafdcf074112_init.py  c0422d2da7b7_init.py
src/: auth_routes.py  auth_services.py  cloudinary_example  email.py  routes_users.py  schemas.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/templates/: email_template.html
